--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
 </head>
 <body>
     
@@ -52,7 +55,7 @@
 
     .lettering {
             font-size: 40px;
-            font-family: "caviar dreams";
+            font-family: "Poetsen One";
             position: absolute;
             transition: linear;
             opacity:1;
