--- a/index.html
+++ b/index.html
@@ -81,7 +81,13 @@
             }   
             .lettering {
                 font-size: 40px;
-            }   
+            }  
+            .navigation {
+                width: 160px;
+            } 
+            .navButtons {
+                font-size: 24px;
+            }
     }
     @media (max-width: 700px) {
             .logobee {
@@ -94,6 +100,12 @@
             .lettering {
                 font-size: 35px;
             }
+            .navigation {
+                width: 120px;
+            } 
+            .navButtons {
+                font-size: 18px;
+            }
     }
     @media (max-width: 550px) {
             .logobee {
@@ -105,6 +117,12 @@
             } 
             .lettering {
                 font-size: 30px;
+            }
+            .navigation {
+                width: 80px;
+            } 
+            .navButtons {
+                font-size: 16px;
             }
     }
 
